--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -32,6 +32,8 @@
   inset-inline-start: 0;
   width: 100%;
   height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
