--- a/app/javascript/flavours/polyam/styles/components/index.scss
+++ b/app/javascript/flavours/polyam/styles/components/index.scss
@@ -20,6 +20,7 @@
 @import 'local_settings';
 @import 'single_column';
 @import 'announcements';
+@import 'conversation';
 @import 'explore';
 @import 'signed_out';
 @import 'privacy_policy';
