Move notification classes to `notification.scss`
Extracts classes for notifications to new file.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/index.scss
+++ b/app/javascript/flavours/polyam/styles/components/index.scss
@@ -4,6 +4,7 @@
 @import 'accounts';
 @import 'domains';
 @import 'status';
+@import 'notification';
 @import 'modal';
 @import 'compose_form';
 @import 'columns';
