Move dropdown classes to `dropdown.scss`
Extracts dropdown classes to `dropdown.scss`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/index.scss
+++ b/app/javascript/flavours/polyam/styles/components/index.scss
@@ -1,6 +1,7 @@
 @import 'animations';
 @import 'misc';
 @import 'buttons';
+@import 'dropdown';
 @import 'accounts';
 @import 'domains';
 @import 'status';
