--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -161,6 +161,48 @@ $ui-header-height: 55px;
   height: 100%;
 }
 
+.column,
+.drawer {
+  flex: 1 1 100%;
+  overflow: hidden;
+}
+
+@media screen and (width >= 631px) {
+  .columns-area {
+    padding: 0;
+  }
+
+  .column,
+  .drawer {
+    flex: 0 0 auto;
+    padding: 10px;
+    padding-inline-start: 5px;
+    padding-inline-end: 5px;
+
+    &:first-child {
+      padding-inline-start: 10px;
+    }
+
+    &:last-child {
+      padding-inline-end: 10px;
+    }
+  }
+
+  .columns-area > div {
+    .column,
+    .drawer {
+      padding-inline-start: 5px;
+      padding-inline-end: 5px;
+    }
+  }
+}
+
+// .columns-area--mobile (Moved to single-column.scss by upstream)
+
+.column-link--transparent .icon-with-badge__badge {
+  border-color: darken($ui-base-color, 8%);
+}
+
 .column-title {
   text-align: center;
   padding-bottom: 32px;
