Further SCSS refactoring (#413)
* Move button CSS from `misc.scss` to `buttons.scss`

Extract CSS for buttons into `buttons.scss`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move animations to `animations.scss`

Moves animations from `misc.scss` and `status.scss` to `animations.scss`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move `.inline-account` to `account.scss`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move `.conversation` to `conversation.scss`

Extracts conversation class to new `conversation.scss` file

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move notification classes to `notification.scss`

Extracts classes for notifications to new file.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move dropdown classes to `dropdown.scss`

Extracts dropdown classes to `dropdown.scss`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move column classes from `misc.scss` to `columns.scss`

Technically more classes in `misc.scss` belong into `columns.scss` but I wanted to start with the ones which have "column" in the name.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Move animation classes to `animations.scss`

Move `circular-progress` and `pulse-loading` classes to `animations.scss`

Co-autho

--- a/app/javascript/flavours/polyam/styles/components/index.scss
+++ b/app/javascript/flavours/polyam/styles/components/index.scss
@@ -1,7 +1,11 @@
+@import 'animations';
 @import 'misc';
+@import 'buttons';
+@import 'dropdown';
 @import 'accounts';
 @import 'domains';
 @import 'status';
+@import 'notification';
 @import 'modal';
 @import 'compose_form';
 @import 'columns';
@@ -18,6 +22,7 @@
 @import 'local_settings';
 @import 'single_column';
 @import 'announcements';
+@import 'conversation';
 @import 'explore';
 @import 'signed_out';
 @import 'privacy_policy';
