Fix white corners in textarea in simple UI
Fixes white corners in textarea of  compose panel by making the background of the wrapper transparent

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
+++ b/app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
@@ -262,6 +262,13 @@ button.icon-button {
 
 // Compose
 
+// Fix white corners in compose textarea in simple UI
+.compose-panel {
+  .compose-form__autosuggest-wrapper {
+    background-color: transparent;
+  }
+}
+
 .compose-form {
   // Bar below textarea
   &__buttons-wrapper {
