[Polyam] Reduce CSS and markup differences with upstream
Port 9a11b077f78e2228b9316571d37158816ff5028a to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -331,6 +331,22 @@
         height: 100%;
       }
 
+      .compose-form__upload-button-icon {
+        line-height: 27px;
+      }
+
+      .compose-form__sensitive-button {
+        display: none;
+
+        &.compose-form__sensitive-button--visible {
+          display: block;
+        }
+
+        .compose-form__sensitive-button__icon {
+          line-height: 27px;
+        }
+      }
+
       // Polyam: Upstream removed this. I think it looks better.
       & > hr {
         display: inline-block;
@@ -615,10 +631,6 @@
 .privacy-dropdown__option__content {
   flex: 1 1 auto;
   color: $lighter-text-color;
-
-  &:not(:first-child) {
-    margin-inline-start: 10px;
-  }
 
   strong {
     font-weight: 500;
