--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -132,8 +132,9 @@
   }
 
   &.light {
-    .status__relative-time {
-      color: $lighter-text-color;
+    .status__relative-time,
+    .status__visibility-icon {
+      color: $light-text-color;
     }
 
     .status__display-name {
