--- a/app/javascript/flavours/polyam/styles/components/media.scss
+++ b/app/javascript/flavours/polyam/styles/components/media.scss
@@ -17,19 +17,18 @@
   background: $base-overlay-background;
   color: $darker-text-color;
   border: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  border-radius: 4px;
+  appearance: none;
 
   &:hover,
   &:active,
   &:focus {
+    padding: 0;
     color: lighten($darker-text-color, 8%);
   }
-
-  .status__content > & {
-    margin-top: 15px; // Add margin when used bare for NSFW video player
-  }
-  @include fullwidth-gallery;
 }
 
 .media-spoiler__warning {
@@ -40,7 +39,7 @@
 .media-spoiler__trigger {
   display: block;
   font-size: 11px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .media-gallery__item__badges {
