Fix color of profile fields content
Changes the color to the default color, which makes it more distinct and readable

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -174,6 +174,17 @@ body {
   }
 }
 
+// Profiles
+
+.account__header {
+  // Polyam: Make field content distinct and more readable
+  .account__header__fields {
+    dd {
+      color: $ui-primary-color;
+    }
+  }
+}
+
 // dropdowns
 .dropdown-menu,
 .dropdown-menu__item a,
