[Polyam] Further reduce CSS differences with upstream
Port 034be5ad507dc3e08515b18fcc53ade646e026c7 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -325,10 +325,13 @@ a.status__display-name,
 }
 
 .detailed-status__display-name {
-  color: $secondary-text-color;
-  display: block;
-  line-height: 24px;
-  margin-bottom: 15px;
+  color: $darker-text-color;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 15px;
+  line-height: 22px;
+  margin-bottom: 16px;
   overflow: hidden;
 
   strong,
@@ -339,14 +342,8 @@ a.status__display-name,
   }
 
   strong {
-    font-size: 16px;
     color: $primary-text-color;
   }
-}
-
-.detailed-status__display-avatar {
-  float: left;
-  margin-inline-end: 10px;
 }
 
 .status__relative-time,
