[Polyam] Further reduce differences with upstream
Port bbecf1c56b12fc2fa3c980d30a66e46903d12b7a to polyam-glitch

Kept sensitive marker

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/sensitive.scss
+++ b/app/javascript/flavours/polyam/styles/components/sensitive.scss
@@ -1,4 +1,4 @@
-// glitch-specific "sensitive" label on displayed images; TODO: remove it?
+// Polyam: Kept from upstream -- usecase might be niche, but still useful
 .sensitive-marker {
   margin: 0 3px;
   border-radius: 2px;
