Fix background of profiles in FairyFloss theme
Background override now needs to be applied directly to header class.

Also account-note textarea focus.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
+++ b/app/javascript/flavours/polyam/styles/fairy-floss/diff.scss
@@ -428,9 +428,7 @@ button.icon-button {
 
 .account {
   &__header {
-    &__bar {
-      background-color: $purple5;
-    }
+    background-color: $purple5;
 
     &__image {
       background-color: $purple1;
@@ -451,6 +449,15 @@ button.icon-button {
     &__bio {
       .account__header__fields {
         border-color: lighten($purple1, 12%);
+      }
+    }
+
+    // Polyam: Keep same background as header
+    &__account-note {
+      textarea {
+        &:focus {
+          background-color: $purple5;
+        }
       }
     }
   }
