Fix background of profiles in Oatstodon
Background now needs to be applied to header class directly

Also account-note textarea focus.

Also removes new border below header image.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/oatstodon/diff.scss
+++ b/app/javascript/flavours/polyam/styles/oatstodon/diff.scss
@@ -508,9 +508,14 @@ hr {
   }
 
   &__header {
+    background-color: $background-brighter;
+
+    &__image {
+      border-bottom: none;
+    }
+
     &__bar {
       border-bottom: none;
-      background-color: $background-brighter;
     }
 
     &__bio {
@@ -525,6 +530,15 @@ hr {
 
       dt {
         color: $primary-text-color;
+      }
+    }
+
+    // Polyam: Keep same background as header
+    &__account-note {
+      textarea {
+        &:focus {
+          background-color: $background-brighter;
+        }
       }
     }
   }
