[Polyam] Further reduce CSS changes with upstream
Port 89ea492d702218f1ac60ad7b2f2698f3cc1984aa to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -1,3 +1,10 @@
+.notification__relative_time {
+  color: $dark-text-color;
+  float: right;
+  font-size: 14px;
+  padding-bottom: 1px;
+}
+
 .notification__favourite-icon-wrapper {
   inset-inline-start: 0;
   position: absolute;
