--- a/app/javascript/flavours/polyam/styles/components/misc.scss
+++ b/app/javascript/flavours/polyam/styles/components/misc.scss
@@ -66,52 +66,14 @@ body > [data-popper-placement] {
   text-overflow: ellipsis;
   white-space: nowrap;
 
-  a {
-    color: inherit;
-    text-decoration: inherit;
-  }
-
-  strong {
-    display: block;
-  }
-
-  > a:hover {
-    strong {
-      text-decoration: underline;
-    }
-  }
-
-  &.inline {
-    padding: 0;
-    height: 18px;
-    font-size: 15px;
-    line-height: 18px;
+  &__account {
     text-overflow: ellipsis;
-    white-space: nowrap;
     overflow: hidden;
-
-    strong {
-      display: inline;
-      height: auto;
-      font-size: inherit;
-      line-height: inherit;
-    }
-
-    span {
-      display: inline;
-      height: auto;
-      font-size: inherit;
-      line-height: inherit;
-    }
   }
 }
 
 .display-name__html {
   font-weight: 500;
-}
-
-.display-name__account {
-  font-size: 14px;
 }
 
 .image-loader {
