--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -97,8 +97,7 @@
 
 .status {
   padding: 10px 14px;
-  position: relative;
-  height: auto;
+  min-height: 54px;
   border-bottom: 1px solid lighten($ui-base-color, 8%);
   cursor: auto;
 
@@ -154,9 +153,60 @@
         color: $primary-text-color;
         background: $ui-primary-color;
 
-        &:hover {
+        &:hover,
+        &:focus {
           background: lighten($ui-primary-color, 8%);
         }
+      }
+    }
+  }
+
+  &--in-thread {
+    $thread-margin: 46px + 10px;
+
+    border-bottom: 0;
+
+    .status__content,
+    .status__action-bar {
+      margin-inline-start: $thread-margin;
+      width: calc(100% - ($thread-margin));
+    }
+  }
+
+  &--first-in-thread {
+    border-top: 1px solid lighten($ui-base-color, 8%);
+  }
+
+  &__line {
+    height: 10px - 4px;
+    border-inline-start: 2px solid lighten($ui-base-color, 8%);
+    width: 0;
+    position: absolute;
+    top: 0;
+    inset-inline-start: 14px + ((46px - 2px) * 0.5);
+
+    &--full {
+      top: 0;
+      height: 100%;
+
+      &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 10px - 4px;
+        height: 46px + 4px + 4px;
+        width: 2px;
+        background: $ui-base-color;
+        inset-inline-start: -2px;
+      }
+    }
+
+    &--first {
+      top: 10px + 46px + 4px;
+      height: calc(100% - (10px + 46px + 4px));
+
+      &::before {
+        display: none;
       }
     }
   }
@@ -165,6 +215,7 @@
     background-position: center;
     background-size: cover;
     user-select: none;
+    min-height: 0;
 
     &.has-background::before {
       display: block;
@@ -231,29 +282,25 @@
         rgba(mix($ui-base-color, $ui-highlight-color, 95%), 1)
       );
     }
-
-    .notification__message {
-      margin-bottom: 0;
-    }
-
-    .status__info .notification__message > span {
-      white-space: nowrap;
-    }
   }
 
-  .notification__message {
-    margin: -10px 0 10px;
-  }
-
+  // Polyam: Reactions
   .reactions-bar--empty {
     display: none;
   }
 }
 
+.status__wrapper.collapsed {
+  .notification__message {
+    margin-bottom: 0;
+    white-space: nowrap;
+  }
+}
+
 .status__relative-time {
-  display: inline-block;
-  color: $dark-text-color;
+  display: block;
   font-size: 14px;
+  color: $dark-text-color;
   text-align: end;
   white-space: nowrap;
   overflow: hidden;
@@ -265,24 +312,37 @@
   overflow: hidden;
 }
 
-.status__info__account .status__display-name {
-  display: block;
+.status__info .status__display-name {
   max-width: 100%;
+  display: flex;
+  font-size: 15px;
+  line-height: 22px;
+  align-items: center;
+  gap: 10px;
+  overflow: hidden;
+
+  .display-name {
+    bdi {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    &__account {
+      white-space: nowrap;
+      display: block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
 }
 
 .status__info {
+  font-size: 15px;
+  padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
-  font-size: 15px;
-
-  > span {
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-
-  .notification__message > span {
-    word-wrap: break-word;
-  }
+  gap: 10px;
+  cursor: pointer;
 }
 
 .status__info__icons {
@@ -290,24 +350,17 @@
   align-items: center;
   height: 1em;
   color: $action-button-color;
+  gap: 4px;
 
-  .status__media-icon,
-  .status__visibility-icon,
-  .status__reply-icon,
-  .text-icon {
-    padding-inline-start: 2px;
-    padding-inline-end: 2px;
-  }
-
-  // Polyam: Different class and size to make it more consistent
+  // Polyam: Different class as otherwise doesn't apply to collapse icon
   .icon {
-    width: 1em;
-    height: 1em;
+    width: 16px;
+    height: 16px;
   }
+}
 
-  .status__collapse-button.active > .icon {
-    transform: rotate(-180deg);
-  }
+.status__collapse-button.active > .icon {
+  transform: rotate(-180deg);
 }
 
 .no-reduce-motion .status__collapse-button {
@@ -322,12 +375,6 @@
       animation: spring-flip-out 1s linear;
     }
   }
-}
-
-.status__info__account {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
 }
 
 .status-check-box__status {
@@ -366,6 +413,8 @@
 }
 
 .status__prepend {
+  padding: 8px 14px; // intentionally reduced padding in glitch-soc
+  padding-bottom: 0;
   display: inline-flex;
   gap: 10px;
   font-size: 14px;
@@ -385,19 +434,19 @@
 }
 
 .status__action-bar {
-  align-items: center;
   display: flex;
+  align-items: center;
   gap: 18px;
   margin-top: 8px;
+
+  &-spacer {
+    flex-grow: 1;
+  }
 
   // Polyam: Reaction button
   & > .emoji-picker-dropdown > .emoji-button {
     padding: 0;
   }
-}
-
-.status__action-bar-spacer {
-  flex-grow: 1;
 }
 
 .detailed-status__action-bar-dropdown {
@@ -453,7 +502,7 @@
 }
 
 .detailed-status__meta {
-  margin-top: 15px;
+  margin-top: 16px;
   color: $dark-text-color;
   font-size: 14px;
   line-height: 18px;
@@ -518,10 +567,10 @@
   }
 }
 
-a.status__display-name,
+.status__display-name,
 .reply-indicator__display-name,
 .detailed-status__display-name,
-.account__display-name {
+a.account__display-name {
   &:hover .display-name strong {
     text-decoration: underline;
   }
@@ -554,16 +603,9 @@ a.status__display-name,
   }
 }
 
-.status__relative-time,
-.detailed-status__datetime {
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
 .status__avatar {
-  flex: none;
-  margin-inline-end: 10px;
+  width: 46px;
+  height: 46px;
 }
 
 .muted {
@@ -851,78 +893,15 @@ a.status-card {
   width: 100%;
 }
 
-// TODO: Create mixin?
-.notification,
-.status {
-  position: relative;
-
-  // Merged from duplicate class upstream
-  &.unread {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      inset-inline-start: 0;
-      width: 100%;
-      height: 100%;
-      border-inline-start: 4px solid $highlight-text-color;
-      pointer-events: none;
-    }
-  }
-
-  &--in-thread {
-    border-bottom: 0;
-
-    .status__content,
-    .status__action-bar,
-    .reactions-bar {
-      margin-inline-start: 46px + 10px;
-      width: calc(100% - (46px + 10px));
-    }
-  }
-
-  &--first-in-thread {
-    border-top: 1px solid lighten($ui-base-color, 8%);
-  }
-
-  &__line {
-    height: 10px - 4px;
-    border-inline-start: 2px solid lighten($ui-base-color, 8%);
-    width: 0;
-    position: absolute;
-    top: 0;
-    inset-inline-start: 14px + ((46px - 2px) * 0.5);
-
-    &--full {
-      top: 0;
-      height: 100%;
-
-      &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 10px - 4px;
-        height: 46px + 4px + 4px;
-        width: 2px;
-        background: $ui-base-color;
-        inset-inline-start: -2px;
-      }
-    }
-
-    &--first {
-      top: 10px + 46px + 4px;
-      height: calc(100% - (10px + 46px + 4px));
-
-      &::before {
-        display: none;
-      }
-    }
+.status__relative-time,
+.detailed-status__datetime {
+  &:hover {
+    text-decoration: underline;
   }
 }
 
 .status__content {
   position: relative;
-  margin: 10px 0;
   font-size: 15px;
   line-height: 20px;
   word-wrap: break-word;
@@ -1061,6 +1040,24 @@ a.status-card {
     .icon {
       color: $dark-text-color;
       vertical-align: middle;
+    }
+  }
+}
+
+.notification,
+.status__wrapper {
+  position: relative;
+
+  &.unread {
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      inset-inline-start: 0;
+      width: 100%;
+      height: 100%;
+      border-inline-start: 4px solid $highlight-text-color;
+      pointer-events: none;
     }
   }
 }
