--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -1414,6 +1414,12 @@ body > [data-popper-placement] {
       padding-top: 1px;
     }
   }
+
+  // Polyam: Reactions -- needs more work, or different markup
+  .emoji-button {
+    padding-inline-start: 0;
+    padding-inline-end: 0;
+  }
 }
 
 .detailed-status__action-bar-dropdown {
