[Polyam] Further reduce CSS and markup differences with upstream
Port bf6e57b420ed929ac9d670d1f12e2a1cf5eab80a to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/buttons.scss
+++ b/app/javascript/flavours/polyam/styles/components/buttons.scss
@@ -380,12 +380,12 @@ button.icon-button.active .icon-retweet {
   z-index: 100;
 
   &--minified {
-    display: flex;
+    display: flex; // glitch: media icon in spoiler button
     inset-inline-start: 4px;
     top: 4px;
     width: auto;
     height: auto;
-    align-items: center;
+    align-items: center; // glitch: media icon in spoiler button
   }
 
   &--click-thru {
