--- a/app/javascript/flavours/polyam/styles/components/dropdown.scss
+++ b/app/javascript/flavours/polyam/styles/components/dropdown.scss
@@ -27,14 +27,14 @@
 
 .dropdown-menu__separator {
   border-bottom: 1px solid var(--dropdown-border-color);
-  margin: 2px 0;
+  margin: 2px 0; // glitch: reduced margins
   height: 0;
 }
 
 .dropdown-menu {
   background: var(--dropdown-background-color);
   border: 1px solid var(--dropdown-border-color);
-  padding: 2px;
+  padding: 2px; // glitch: reduced padding
   border-radius: 4px;
   box-shadow: var(--dropdown-shadow);
   z-index: 9999;
@@ -64,8 +64,8 @@
   &__container {
     &__header {
       border-bottom: 1px solid var(--dropdown-border-color);
-      padding: 6px 14px;
-      padding-bottom: 12px;
+      padding: 6px 14px; // glitch: reduced padding
+      padding-bottom: 12px; // glitch: reduced padding
       margin-bottom: 4px;
       font-size: 13px;
       line-height: 18px;
@@ -121,7 +121,7 @@
     font: inherit;
     display: block;
     width: 100%;
-    padding: 6px 14px;
+    padding: 6px 14px; // glitch: reduced padding
     border: 0;
     margin: 0;
     background: transparent;
