--- a/app/javascript/flavours/polyam/styles/components/misc.scss
+++ b/app/javascript/flavours/polyam/styles/components/misc.scss
@@ -519,17 +519,12 @@ input.glitch-setting-text {
   line-height: 24px;
 }
 
-.setting-toggle__label,
-.setting-meta__label {
+.setting-toggle__label {
   color: $darker-text-color;
   display: inline-block;
   margin-bottom: 14px;
   margin-inline-start: 8px;
   vertical-align: middle;
-}
-
-.setting-meta__label {
-  float: right;
 }
 
 .upload-area {
