--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -96,7 +96,7 @@
 }
 
 .status {
-  padding: 10px 14px;
+  padding: 10px 14px; // glitch: reduced padding
   min-height: 54px;
   border-bottom: 1px solid lighten($ui-base-color, 8%);
   cursor: auto;
@@ -114,9 +114,11 @@
   opacity: 1;
   animation: fade 150ms linear;
 
+  .media-gallery,
   .video-player,
-  .audio-player {
-    margin-top: 8px;
+  .audio-player,
+  .attachment-list {
+    margin-top: 8px; // glitch: reduced margins
   }
 
   &.status-direct {
@@ -149,7 +151,7 @@
         color: $highlight-text-color;
       }
 
-      a.status__content__spoiler-link {
+      &__spoiler-link {
         color: $primary-text-color;
         background: $ui-primary-color;
 
@@ -309,7 +311,6 @@
 
 .status__display-name {
   color: $dark-text-color;
-  overflow: hidden;
 }
 
 .status__info .status__display-name {
@@ -413,7 +414,7 @@
 }
 
 .status__prepend {
-  padding: 8px 14px; // intentionally reduced padding in glitch-soc
+  padding: 8px 14px; // glitch: reduced padding
   padding-bottom: 0;
   display: inline-flex;
   gap: 10px;
@@ -459,7 +460,7 @@
 
 .detailed-status {
   background: lighten($ui-base-color, 4%);
-  padding: 14px 10px;
+  padding: 14px 10px; // glitch: reduced padding
   border-top: 1px solid lighten($ui-base-color, 8%);
 
   &--flex {
@@ -520,7 +521,7 @@
   border-bottom: 1px solid lighten($ui-base-color, 8%);
   display: flex;
   flex-direction: row;
-  padding: 8px 0;
+  padding: 8px 0; // glitch: reduced padding
 }
 
 .detailed-status__link {
@@ -776,7 +777,7 @@ a.status-card {
 .status-card__content {
   flex: 1 1 auto;
   overflow: hidden;
-  padding: 0 8px;
+  padding: 0 8px; // Polyam: Different design
   box-sizing: border-box;
   max-width: 100%;
 }
@@ -815,7 +816,7 @@ a.status-card {
 
 .status-card__image {
   flex: 0 0 auto;
-  width: 90px;
+  width: 90px; // Polyam: Different design
   aspect-ratio: 1;
   background: lighten($ui-base-color, 8%);
   position: relative;
@@ -988,7 +989,7 @@ a.status-card {
   font-size: 14px;
   border: 1px solid lighten($ui-base-color, 8%);
   border-radius: 4px;
-  margin-top: 14px; // glitch-soc change to reduce margins
+  margin-top: 14px; // glitch: reduced margins
   overflow: hidden;
 
   &__icon {
@@ -1030,7 +1031,7 @@ a.status-card {
 
   &.compact {
     border: 0;
-    margin-top: 4px; // glitch-soc addition to reduce margins
+    margin-top: 4px; // glitch: reduced margins
 
     .attachment-list__list {
       padding: 0;
