[Polyam] Fix pillbar button colors
Port 604c93332f860105aca0d02d1654b1220f7ca679 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -922,7 +922,7 @@ $ui-header-height: 55px;
   margin: 0;
   font-size: inherit;
   flex: auto;
-  background-color: $ui-base-color;
+  background-color: lighten($ui-base-color, 8%);
   transition: all 0.2s ease;
   transition-property: background-color, box-shadow;
 
