Fix load order issue for `status__content`
Upstream uses a single file for component CSS and applies the same CSS to multiple classes.

Because Polyam-glitch kept split files, the load order is different and therefore some overrides don't apply.

This was the case with the combined `.status__content, .reply-indicator__content` class

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -463,7 +463,8 @@
 }
 
 // TODO: create mixin?
-.status__content,
+// Polyam: Split out from .status__content, .reply-indicator__content upstream
+// Polyam: Changes here also need to be applied to status.scss
 .reply-indicator__content {
   position: relative;
   font-size: 15px;
