Fix color of show more button in homogay
The color has changed in the default theme, which made the button lighter and less readable.

Restore color of it to how it was before and enhance on hover a bit.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -19,6 +19,19 @@ body {
   color: $highlight-text-color;
 }
 
+// Restore old color of show more button
+.status__content {
+  .status__content__spoiler-link {
+    background-color: lighten($ui-base-color, 30%);
+
+    &:hover,
+    &:focus {
+      // higher for more visibility
+      background-color: lighten($ui-base-color, 37%);
+    }
+  }
+}
+
 // Fix background of disabled vote button
 .poll__footer {
   button {
