--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -225,10 +225,10 @@ a .account__avatar {
   margin-bottom: 4px;
   display: block;
   background-color: rgba($black, 0.45);
-  text-transform: uppercase;
   font-size: 11px;
-  font-weight: 500;
-  padding: 4px;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 2px 6px;
   border-radius: 4px;
   opacity: 0.7;
 
