[Polyam] Switch glitch-soc to upstream's old composer
Port 7586d4348f5958267a9f3e682ee24410f5ece9cb to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -379,50 +379,10 @@
     justify-content: flex-end;
     min-width: 0;
     flex: 0 0 auto;
-    column-gap: 5px;
 
     .compose-form__publish-button-wrapper {
-      padding-top: 10px;
-
-      button {
-        padding: 7px 10px;
-        text-align: center;
-
-        & > span {
-          display: flex;
-          gap: 5px;
-          align-items: center;
-        }
-      }
-
-      // Polyam: Explicitly set width and height to make button square
-      .side_arm {
-        width: 36px;
-        height: 36px;
-      }
+      padding-top: 15px;
     }
-  }
-}
-
-.compose-form__textarea-icons {
-  display: block;
-  position: absolute;
-  top: 29px;
-  inset-inline-end: 5px;
-  bottom: 5px;
-  overflow: hidden;
-
-  & > .textarea_icon {
-    display: block;
-    margin-top: 2px;
-    margin-inline-start: 2px;
-    width: 24px;
-    height: 24px;
-    color: $lighter-text-color;
-    font-size: 18px;
-    line-height: 24px;
-    text-align: center;
-    opacity: 0.8;
   }
 }
 
@@ -476,6 +436,7 @@
   max-width: 100%;
   line-height: 24px;
   overflow: hidden;
+  padding-inline-end: 25px;
   text-decoration: none;
 }
 
