Reduce gap between compose icons
The large gap causes the character counter to overflow.

Reduces the gap to accomodate all icons and prevent overflow.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -390,7 +390,7 @@
 
   &__buttons {
     display: flex;
-    gap: 8px;
+    gap: 5px; // Polyam: Reduced gap to fit icons
     align-items: center;
     flex: 1 1 auto;
 
