Temporarily fix language icon in statuses
Upstream removed the `text-icon` class.

I think it looks a bit wrong so thin, so apply font-weight.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -470,6 +470,11 @@
     width: 16px;
     height: 16px;
   }
+
+  // Polyam: Temporary fix for language icon
+  .text-icon {
+    font-weight: 600;
+  }
 }
 
 .status__collapse-button.active > .icon {
