[Polyam] Improve alt text form accessibility with long texts
Port bbf6cb66f63c23daea725cb2b444a7c9f6c46899 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -715,6 +715,7 @@
 .report-modal__comment {
   box-sizing: border-box;
   width: 50%;
+  min-width: 50%;
 
   @media screen and (width <= 480px) {
     width: 100%;
@@ -783,6 +784,14 @@
     min-height: 100px;
     max-height: 50vh;
     border: 0;
+
+    @media screen and (height <= 600px) {
+      max-height: 20vh;
+    }
+
+    @media screen and (max-width: $no-columns-breakpoint) {
+      max-height: 20vh;
+    }
   }
 
   .setting-toggle {
