[Polyam] Fix search icon position on mobile
Port 1cb74eeec00b413d326308930c48280b4f8325f4 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/search.scss
+++ b/app/javascript/flavours/polyam/styles/components/search.scss
@@ -145,7 +145,6 @@
   .icon {
     position: absolute;
     top: 12px + 2px;
-    inset-inline-start: 16px - 2px;
     display: inline-block;
     opacity: 0;
     transition: all 100ms linear;
@@ -159,6 +158,10 @@
     &.active {
       pointer-events: auto;
       opacity: 1;
+    }
+
+    @media screen and (min-width: $no-gap-breakpoint) {
+      inset-inline-start: 16px - 2px;
     }
   }
 
